--- a/BuildTool/MainWindow.xaml
+++ b/BuildTool/MainWindow.xaml
@@ -86,13 +86,13 @@
 								<StackPanel Margin="10, 30, 10, 10">
 
 									<local:CommandButton  
-										Content="Buld JSX - Production" 
+										Content="Build JSX - Production" 
 										Margin="0,0,0,10" 
 										Click="Button_Click" 
-										CmdCommand="{Binding Path=BuildComand, Source={x:Static properties:Settings.Default}}" />
+										CmdCommand="{Binding Path=BuildCommand, Source={x:Static properties:Settings.Default}}" />
 
                                     <local:CommandButton  
-										Content="Buld JSX - Debug" 
+										Content="Build JSX - Debug" 
 										Margin="0,0,0,10" 
 										Click="Button_Click"
 										CmdCommand="{Binding Path=BuildDebugCommand, Source={x:Static properties:Settings.Default}}" />
